/*
 * $Id: ChangeLog,v 1.810 2011-10-28 01:36:53 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-10-27 23:40:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
     * Updated.

2011-10-27 23:20:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * h_progressbar.prg
     ! Fixed: method SetStyleMarquee makes control unresponsive.
     + Added: method SetStyleNormal to reset control to normal style.
     + Added: methods IsStyleMarquee, IsStyleNormal, StartMarquee,
       StopMarquee and IsMarqueeRunning.
     * Changed: 'DEFAULT <var> To <value>' by 'ASSIGN'.
   + i_windefs.ch
     + Added PBS_MARQUEE and PBM_SETMARQUEE.

2011-10-27 18:00:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * h_toolbar.prg
     + Added lBreak parameter to function _EndToolBar, it controls
       the inclusion of a BREAK after an END TOOLBAR.
   * i_toolbar.ch
     + Added NOBREAK clause to END TOOLBAR.

2011-10-26 19:25:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_windefs.ch
     + Added defines for splitbox styles.
   * doc/classes.txt
     * Updated.
   * source/h_splitbox.prg
     + Added METHODs BandGripperOFF, BandGripperON, BandHasGripper,
       HideBand, ShowBand and IsBandVisible.
     * Function SIZEREBAR now process all bands not just the first.

2011-10-25 20:25:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
     * Updated.
   + doc/treeofclasses.prg
     + Added DATAs and METHODs of each class. Thanks to
     Roberto Iturriaga (robertoiturriaga@yahoo.com.ar) and
     Miguel Juarez (migsoft@oohg.org) for their contribution.

2011-10-24 21:15:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_tree.prg
     ! Items on target tree were not being hilighted.
     * METHOD ItemVisible modified to use METHOD ItemToHandle.